# WordGames

./: CMakeLists.txt  README.md  application.h  benchmarks.h  cli.h  common.h  dictionary_9030.txt  graph.h  io.h  main.cpp  measure_time.h  random.h  small_map.h  static_trie.h  tests.cpp  trie.h  word_challenge.h  wordle.h
eval/: plots.ipynb  word_challenge.csv  word_challenge_bfs.csv  word_challenge_normal.csv  wordle.csv  wordle_letter_frequency.csv  wordle_random_candidate.csv
